--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.8.3",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "vue": "^3.2.13"
+    "swiper": "^8.4.5",
+    "vue": "^3.2.13",
+    "vue-awesome-swiper": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
