--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sass-loader": "^13.2.0",
     "swiper": "^8.4.5",
     "vue": "^3.2.13",
-    "vue-awesome-swiper": "^5.0.1"
+    "vue-awesome-swiper": "^5.0.1",
+    "vue-wow": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
